<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Turtlebot Project</string>
    <string name="menu_settings">Settings</string>
    <string name="joystickName">Joystick</string>
    <string name="scriptName">Scripts</string>
    <string name="accName">Accelerometer</string>
    <string name="accPage">Accel-mtr</string>
    <string name="joystickPage">Joystick</string>
    <string name="scriptPage">Scripts</string>
    <string name="voicePage">Voice-ctrl</string>
    <string name="title_activity_btdevices_view">Bluetooth Devices</string>
    <string name="banjoName">Banjo</string>
    <string name="cover_dockName">Cover + Dock</string>
    <string name="coverName">Cover</string>
    <string name="figure8Name">Figure 8</string>
    <string name="homeName">Home</string>
    <string name="mouseName">Mouse</string>
    <string name="pachelbelName">Pachelbel</string>
    <string name="spot_coverName">Spot + Cover</string>
    <string name="tagName">Tag</string>
    <string name="wimpName">Wimp</string>
    <string name="jingleName">Jingle</string>
    <string name="startScript">Start Script</string>
    <string name="stopScript">Stop Script</string>
    <string name="btdevices_cancel">Scan for devices</string>
    <string name="title_activity_btdevices_scan">Scanning for devices</string>
    <string name="btdevice_scan_cancel">Cancel</string>
</resources>