<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f2f2f2" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#ffffff" >
        <Button
            android:id="@+id/button1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:drawableTop="@drawable/ic_tabbar_joystick_normal"
            android:text="@string/joystickPage"
            android:background="#ffffff"
            android:textColor="#7597B3"
            android:layout_weight=".25" />

        <Button
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/button3"
            android:layout_toRightOf="@+id/button1"
            android:drawableTop="@drawable/ic_tabbar_script_normal"
            android:text="@string/scriptPage"
            android:background="#ffffff"
            android:textColor="#7597B3"
            android:layout_weight=".25" />

        <Button
            android:id="@+id/button3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/voicePage"
            android:layout_alignParentTop="true"
            android:drawableTop="@drawable/ic_tabbar_voice_normal"
            android:layout_toLeftOf="@id/button4"
            android:background="#ffffff"
            android:textColor="#7597B3"
            android:layout_weight=".25" />
        <Button
            android:id="@+id/button4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:drawableTop="@drawable/ic_tabbar_acc_normal"
            android:text="@string/accPage"
            android:background="#ffffff"
            android:textColor="#7597B3"
            android:layout_weight=".25" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="100dp"
        android:orientation="vertical" >
        <ScrollView
            android:id="@+id/sc1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >
            <TextView
                android:id="@+id/txtSpeechInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:textColor="#000000"
                android:textSize="26dp"
                android:textStyle="normal"
                android:text= "" />
        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageButton
            android:id="@+id/btnSpeak"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:src="@drawable/ic_btn" />


    </LinearLayout>

</RelativeLayout>