<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f2f2f2" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#ffffff" >
    <Button
        android:id="@+id/button1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:drawableTop="@drawable/ic_tabbar_joystick_normal"
        android:text="@string/joystickPage"
        android:background="#ffffff"
        android:textColor="#7597B3"
        android:layout_weight=".25" />

    <Button
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/button3"
        android:layout_toRightOf="@+id/button1"
        android:drawableTop="@drawable/ic_tabbar_script_normal"
        android:text="@string/scriptPage"
        android:background="#ffffff"
        android:textColor="#7597B3"
        android:layout_weight=".25" />

    <Button
        android:id="@+id/button3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/voicePage"
        android:layout_alignParentTop="true"
        android:drawableTop="@drawable/ic_tabbar_voice_normal"
        android:layout_toLeftOf="@id/button4"
        android:background="#ffffff"
        android:textColor="#7597B3"
        android:layout_weight=".25" />
    <Button
        android:id="@+id/button4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:drawableTop="@drawable/ic_tabbar_acc_normal"
        android:text="@string/accPage"
        android:background="#ffffff"
        android:textColor="#7597B3"
        android:layout_weight=".25" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textView6"
        android:layout_below="@+id/textView6"
        android:text="Stopped"
        android:textColor="#000000"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView5"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/linearLayout1"
        android:layout_marginRight="18dp"
        android:text="X:"
        android:textColor="#000000"/>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/radioGroup1"
        android:layout_alignLeft="@+id/textView4"
        android:text="Orientation"
        android:layout_alignTop="@id/textView1"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#000000"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView4"
        android:layout_below="@+id/textView2"
        android:text="Y:"
        android:textColor="#000000"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:text="Stopped"
        android:textColor="#000000"/>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/linearLayout1"
        android:layout_marginRight="65dp"
        android:layout_marginTop="49dp"
        android:text="Velocity"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#000000"/>



    <com.example.turtlebotproject.JoystickView
        android:id="@+id/joystickView"
        android:layout_width="175dip"
        android:layout_height="175dip"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="false"
        android:layout_marginBottom="40dp"
        android:layout_marginRight="140dp"/>

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1">

        <RadioButton
            android:id="@+id/radio0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="Fast"
            android:textColor="#000000"/>

        <RadioButton
            android:id="@+id/radio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Medium"
            android:textColor="#000000"/>

        <RadioButton
            android:id="@+id/radio2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Slow"
            android:textColor="#000000"/>
    </RadioGroup>
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageButton"
        android:layout_alignBottom="@+id/joystickView"
        android:layout_alignRight="@+id/radioGroup1"
        android:layout_marginBottom="0dp"
        android:layout_marginRight="35dp"
        android:src="@drawable/down"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageButton2"
        android:src="@drawable/up"
        android:layout_alignTop="@+id/joystickView"
        android:layout_alignLeft="@+id/imageButton" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageButton3"
        android:src="@drawable/left"
        android:layout_alignBottom="@+id/joystickView"
        android:layout_alignRight="@+id/radioGroup1"
        android:layout_marginBottom="63dp"
        android:layout_marginRight="100dp"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageButton4"
        android:src="@drawable/right"
        android:layout_alignBottom="@+id/joystickView"
        android:layout_alignRight="@+id/radioGroup1"
        android:layout_marginBottom="63dp"
        android:layout_marginRight="-30dp"/>

</RelativeLayout>